--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 .main-bg-color {
-    background-color: #303030;
+    background-color: #ECECEC;
 }
 
 .text-color {
@@ -25,4 +25,45 @@ p {
 .spacing-2
 {
     margin: 15em;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #2C2C2C;
+}
+
+li {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 20px 30px;
+    text-decoration: none;
+    font-family: 'Kanit', sans-serif;
+    margin-left:30px;
+    margin-right:30px;
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
+}
+
+#search {
+    float:right;
+}
+
+#box {
+    width: 650px;
+    height: 400px;
+    background-color:rgb(82, 223, 89);
+    float:left;
+    margin-right:50px;
+}
+
+.winner {
+    margin:40px 30px 30px 60px;
 }
