--- a/home.css
+++ b/home.css
@@ -7,6 +7,10 @@
     text-align: center;
 }
 
+.text-black {
+    color:#141414;
+}
+
 .header-font {
     font-size: 3em;
     font-family: 'Kanit', sans-serif;
